Fixing overflow.

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ html, body {
 }
 
 .main .middle .score-box .choiceSymbol{ 
-  font-size: 80px;
+  font-size: 30px;
 }
 
 .main .bottom {   
